hphp/hack/test/typecheck/new_inference/eager_solve/map_any.php.exp
File "map_any.php", line 11, characters 26-27:
Was expecting a type hint (Typing[4032])
